# Autocure

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
autocure/: __init__.py  cure.py  pipeline.py  scan.py  train.py
autocure.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autocure/cli/: main.py
autocure/models/: logistic_regression_model.pickle  random_forest_classifier_model.pickle
test/: test.py
