[metadata]
name = autocure
version = 1.2.0
author = Vishal More
description = Automated data cleaning and auto ML training with hyperparameter tuning.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = data-cleaning, machine-learning, automation, sklearn, pipeline
url = https://pypi.org/project/autocure/
project_urls =
    Source = https://github.com/YOUR_GITHUB/autocure
    Tracker = https://github.com/YOUR_GITHUB/autocure/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    scikit-learn
    click

[options.entry_points]
console_scripts =
    autocure=autocure.cli.main:cli
